<resources>
    <string name="app_name">Watch Yourself</string>
    <string name="ConnectionAcceptedMsg">Service Connection from HelloAccessory(C) has been accepted.</string>
    <string name="ConnectionEstablishedMsg">Service Connection with HelloAccessory(C) has been established.</string>
    <string name="ConnectionTerminateddMsg">Service Connection with HelloAccessory(C) has been terminated.</string>
    <string name="ConnectionAlreadyExist">Service Connection has already been existed!!!</string>
    <string name="ConnectionAlreadyDisconnected">Service Connection has already been disconnected!!!</string>
    <string name="action_help">Help</string>
    <string name="action_watchyourself">WatchYourself</string>
    <string name="add_emergencyContact">Add Emergency Contact</string>
    <string name="configure_message">Configure Message</string>
    <string name="add_emergency_contact">Add Emergency Contact</string>
    <string name="enter_name">Enter Name</string>
    <string name="emergency_phone_number">Emergency Phone Number</string>
    <string name="add_contact_btn">Add Contact</string>
    <string name="create_emergency_message">Create Emergency Message</string>
    <string name="generate_default_message">Generate Default Message</string>
    <string name="configure">Configure</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="recordings">Recordings..</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="contact_success">Contact Added Successfully</string>
    <string name="request_contact">Please add emergency contact details first.</string>
    <string name="record_video">Record Video</string>
    <string name="call_message">Calling Emergency Contact.</string>
    <string name="emergency_message">"Emergency! Please locate and help me! "</string>
    <string name="sms_sent">SMS sent.</string>
    <string name="request_location">Need your location!</string>
    <string name="request_permission">This app needs messaging and location permission</string>
    <string name="is_granted">"is Granted "</string>
    <string name="permission_msg">This app needs a permission</string>
    <string name="call_initiated">Emergency Call Initiated</string>
    <string name="call_permission">This app needs call permission</string>
    <string name="video_recorded">Video Recorded</string>
    <string name="audio_recorded">Audio Recorded</string>
    <string name="audio_permission">This app needs audio recording permission</string>
    <string name="recording_started">Recording started</string>
    <string name="latitude">latitude:</string>
    <string name="longitude">" longitude:"</string>
    <string name="record_voice">Record Voice</string>
    <string name="send_msg">Send Emergency Message</string>
    <string name="make_call">Make Emergency Call</string>
    <string name="recording_done">Recording Completed</string>
    <string name="file_deleted">File has been deleted</string>
    <string name="pause_audio">An audio file is already playing. Please stop that</string>
    <string name="file_size">"File size   "</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="camera_access_granted">Camera Access Granted</string>
    <string name="request_video_access">Need your video access!</string>
    <string name="recording_stopped">Recording stopped</string>
</resources>
