<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/activity_recording_list"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/linearlayout_player"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:text="@string/start"
        android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_stop"
            android:layout_toRightOf="@id/btn_start"
            android:layout_width="wrap_content"
            android:text="@string/stop"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"/>

    </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/recordings"
        android:padding="5dp"
        android:id="@+id/tv_label"
        android:layout_height="wrap_content"/>
    <ListView
        android:layout_below="@+id/tv_label"
        android:layout_width="match_parent"
        android:id="@+id/list"
        android:divider="@color/colorPrimary"
        android:dividerHeight="2px"
        android:layout_marginBottom="?attr/actionBarSize"
        android:layout_height="match_parent"></ListView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:layout_gravity="bottom"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>



</LinearLayout>
